# back-yt-react-db

./: .gitignore  Cargo.toml  README.md
config/: config.yaml
migrations/: 20230808005715_youtuber_permissions.sql  20231013145412_custom_url.sql  20231013235530_idx_custom_url.sql
script/: docker-compose.yml  start_db.sh
src/: config.rs  main.rs
src/models/: claim.rs  mod.rs
src/routes/: data.rs  google_routes.rs  mod.rs
